--- a/frontend/templates/SignUp.html
+++ b/frontend/templates/SignUp.html
@@ -61,17 +61,17 @@
                                             <form action="index.html" method="post">
                                                 <div class="form-group">
                                                     <label class="sr-only" for="frontend_signup_username">Username</label>
-                                                    <input class="form-control" type="text" id="frontend_signup_username" placeholder="Username" />
-                                                </div>
-                                                <div class="form-group">
-                                                    <label class="sr-only" for="frontend_signup_email">Email</label>
-                                                    <input class="form-control" type="email" id="frontend_signup_email" placeholder="Email" />
+                                                    <input class="form-control" type="text" id="frontend_signup_username" placeholder="用户名（邮箱格式为 用户名@skyfall.icu ）" />
                                                 </div>
                                                 <div class="form-group">
                                                     <label class="sr-only" for="frontend_signup_password">Password</label>
-                                                    <input class="form-control" type="password" id="frontend_signup_password" placeholder="Password" />
+                                                    <input class="form-control" type="password" id="frontend_signup_password" placeholder="密码" />
                                                 </div>
-                                                <button class="btn btn-app btn-block" type="submit">Sign Up</button>
+                                                <div class="form-group">
+                                                    <label class="sr-only" for="frontend_signup_repassword">Comfirm Password</label>
+                                                    <input class="form-control" type="password" id="frontend_signup_repassword" placeholder="确认密码" />
+                                                </div>
+                                                <input type="button" id=signup value='注册' class="btn btn-app btn-block">
                                             </form>
                                         </div>
                                         <!-- .card-block -->
@@ -114,6 +114,34 @@
         <script src="../../static/js/core/jquery.placeholder.min.js"></script>
         <script src="../../static/js/app.js"></script>
         <script src="../../static/js/app-custom.js"></script>
+        <script>
+            $("#signup").click(function () {
+                alert(123);
+                var user = document.getElementById('frontend_signup_username').value;
+                var password = document.getElementById('frontend_signup_password').value;
+                var repassword = document.getElementById('frontend_signup_repassword').value;
+                alert(user + password + repassword);
+                if (user == "" || password == "" || repassword =="") alert("请正确输入！");
+                else if(password!=repassword) alert("两次密码输入不一致！");
+                else {
+                    $.ajax({
+                        type: 'POST',
+                        url: '/userRegister/',
+                        // async: false,
+                        data: {
+                            user: user,
+                            password: password,
+                            csrfmiddlewaretoken:'{{ csrf_token }}'
+                        },
+                        success: function (data) {
+                            alert(data.message);
+                            if(data.message=="注册成功") window.location.href="";
+                        }
+                    })
+                }
+                
+            })
+        </script>
 
     </body>
 
