--- a/frontend/templates/Index.html
+++ b/frontend/templates/Index.html
@@ -89,7 +89,7 @@
                                                 <a tabindex="-1" href="javascript:void(0)"> 修改密码 </a>
                                             </li>
                                             <li>
-                                                <a tabindex="-1" href="javascript:void(0)"> 退出登录 </a>
+                                                <a tabindex="-1" href="/"> 退出登录 </a>
                                             </li>
                                         </ul>
                                     </li>
