--- a/frontend/templates/Login.html
+++ b/frontend/templates/Login.html
@@ -62,9 +62,9 @@
                                         <form name="login">
                                             {% csrf_token %}
                                             <div class="form-group">
-                                                <label class="sr-only" for="frontend_login_email">Email</label>
-                                                <input type="email" class="form-control" id="frontend_login_email"
-                                                    placeholder="邮箱" />
+                                                <label class="sr-only" for="frontend_login_username">Username</label>
+                                                <input type="username" class="form-control" id="frontend_login_username"
+                                                    placeholder="用户名" />
                                             </div>
                                             <div class="form-group">
                                                 <label class="sr-only" for="frontend_login_password">Password</label>
@@ -124,16 +124,16 @@
     <script src="../../static/js/app-custom.js"></script>
     <script>
         $("#login").click(function () {
-            var email = document.getElementById('frontend_login_email').value;
+            var username = document.getElementById('frontend_login_username').value;
             var password = document.getElementById('frontend_login_password').value;
-            // alert(email + password);
-            if (email != "" || password != "") {
+            // alert(username + password);
+            if (username != "" || password != "") {
                 $.ajax({
                     type: 'POST',
                     url: '/userIdentified/',
                     // async: false,
                     data: {
-                        email: email,
+                        username: username,
                         password: password,
                         csrfmiddlewaretoken:'{{ csrf_token }}'
                     },
