--- a/frontend/templates/Index.html
+++ b/frontend/templates/Index.html
@@ -58,15 +58,15 @@
                             <li class="nav-item nav-drawer-header">菜单</li>
 
                             <li class="nav-item nav-item-has-subnav">
-                                <a href="javascript:void(0)"><i class="ion-ios-calculator-outline"></i> 写邮件</a>
+                                <a href="/WriteEmail"><i class="ion-ios-calculator-outline"></i> 写邮件</a>
                             </li>
 
                             <li class="nav-item nav-item-has-subnav">
-                                <a href="javascript:void(0)"><i class="ion-ios-compose-outline"></i> 收件箱</a>
+                                <a href="/ReceiveEmail"><i class="ion-ios-compose-outline"></i> 收件箱</a>
                             </li>
 
                             <li class="nav-item nav-item-has-subnav">
-                                <a href="javascript:void(0)"><i class="ion-ios-list-outline"></i> 已发送</a>
+                                <a href="/SentEmail"><i class="ion-ios-list-outline"></i> 已发送</a>
                             </li>
 
                         </ul>
